--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1386,6 +1386,7 @@
 
 			@include tablet {
 				max-width: 100%;
+				width: 100%;
 			}
 		}
 
